--- a/src/blogs/2016-03-23-2015-annual-review.markdown
+++ b/src/blogs/2016-03-23-2015-annual-review.markdown
@@ -14,21 +14,21 @@ tags:
 
 后来小妮妮去了台湾，我分别在三月底和答辩后的六月中去了两次台湾。还记得第一次刚刚到桃园机场见到小妮妮的样子，那时候下着点小雨，空气潮湿闷热但是十分干净没有一丝泥泞。排队等机场大巴的时候工作人员给我的行李箱上贴上了国光字样的行李验证码。（现在想想，从北京出发去台北的那一天正是我飞来飞去的一年的起点，我大黄色亮晶晶的行李箱从那天开始渐渐贴上了各种乱七八糟的条形码。）第一次去台湾去了两个地方，台北和垦丁，先到台北以台大为中心在周边瞎逛，感觉台湾的吃的又好吃又便宜，台大的园子也不比北大差，椰林大道显得很是气派。感觉在这里交流几个月也真是令人羡慕。去垦丁恰好赶在了垦丁的春浪之前，所以人还不多，民宿的价格也还比较便宜，不过就是交通不太方便，先坐高铁到了左营然后租车开了一两个小时才来到垦丁。在垦丁住的地方穿过一条马路就是海边，当天晚上跑去海边走了一下没什么感觉就回来了。但第二天早晨爬起来拉开窗帘的时候就惊呆了。那是一个大晴天，基本无风，太阳把海面照的湛蓝湛蓝的，在别的地方没有见过这样的海面哎！然后只有两个人的卡丁车跑道也真是奢侈，如果还能再去垦丁一定要再跑上几把。
 
-![垦丁](/img/in-post/2015-review/sea.jpg)
+![垦丁](../img/in-post/2015-review/sea.jpg)
 
 第二次去台湾相对于第一次安排的更周密一些，我们去了北投泡温泉，去了澎湖骑机车看落日钓小管，去了台中蓬甲夜市又回到台北吃吃吃。澎湖的一大特色就是没有人，在只有两个人的公路上任意驰骋在大陆真是不敢想。然后最后去的山水沙滩真的是美到爆，后悔没有住在海边了。最后我们还没有直接回北京而是跑去厦门玩了两天。相比台湾干净的海水，厦门的海实在是没什么可看的，但是相比台湾没有滋味的海鲜，厦门的爆炒花蛤真是好吃爆了，我们甚至留下了和两盘花蛤的合影。
 
-![澎湖](/img/in-post/2015-review/penghu.jpg)
+![澎湖](../img/in-post/2015-review/penghu.jpg)
 
 然后我就毕业了，终于毕业了。毕业搬家的时候那叫一个匆忙，我好像是突然就把东西打包好送去了邮局。我只记得当时老季过来帮我把一堆东西搬到了他那里，第二天就去了杭州，匆匆到记不清当时宿舍里还有几个人。在杭州闲了没多久就回家继续闲着，但是闲了没几天就又回到北京准备入职工作了。刚到北京那几天特别艰难，由于我马上去印度培训，没有租房子，自己在同学宿舍的地板上借住了一宿又自己跑去公司附近的宾馆住了两天，那两天我拉着行李箱跑来跑去真是怀念有宿舍的日子。可没想到在之后的大半年里都一直保持这种状态...
 
 8月10号我入职 tw，14号就和几个新入职的同事一起去了印度参加 twu 的培训。为期 5 周的培训课程相当的密集，也相当的辛苦。9月下旬回到北京暂住公司公寓直到10月底开始了小巨人的培训。在成都为期三周的培训让 twu 显得那么的苍白无力。一周 80 个小时的开发时间完全碾压以前任意时段的工作强度。这里培训也把我带入了一个全新的软件设计领域。从此我更注重时间管理，任务拆分，模型设计和单据追朔，DDD的书籍至今也不离手，反复的阅读希望可以有更深入的理解。
 
-![小巨人培训](/img/in-post/2015-review/chengdu.jpg)
+![小巨人培训](../img/in-post/2015-review/chengdu.jpg)
 
 工作之后只在北京待过一个月，其他的时间都在出差。从北京到成都，从成都到武汉，从武汉到西安从西安到深圳，从深圳去北京再从北京回到西安。相对来说西安是待的时间最长的地方。每天大部分时间都在写程序，看书，有点闷，但是希望可以闷出成绩，做出好的东西。
 
-![航线](/img/in-post/2015-review/flight.jpg)
+![航线](../img/in-post/2015-review/flight.jpg)
 
 流水账就说道这里吧。
 
