--- a/src/blogs/2012-04-20-e68f90e58f96e9a1b5e99da2e4b88ae59bbee78987e79a84bookmarklet.markdown
+++ b/src/blogs/2012-04-20-e68f90e58f96e9a1b5e99da2e4b88ae59bbee78987e79a84bookmarklet.markdown
@@ -15,13 +15,9 @@ tags:
 - linkedin
 ---
 
-不多说，这个bookmarklet([](http://en.wikipedia.org/wiki/Bookmarklet))就是用来抽取当前页面上指定大小的图片的工具。点击这个bookmarklet之后，就可以生成一个只有图片的页面，如下图所示。
-
-![](http://o8p12ybem.bkt.clouddn.com/15090265324436.jpg?imageView2/2/w/1200/q/75%7Cimageslim)
-
+不多说，这个bookmarklet([](https://en.wikipedia.org/wiki/Bookmarklet))就是用来抽取当前页面上指定大小的图片的工具。点击这个bookmarklet之后，就可以生成一个只有图片的页面。
 
 那么如果我ctrl+s保存[网页，全部]，当前页面的图片就会随着页面保存到本地了。
-
 
 代码放在这里
 
