--- a/src/blogs/2013-03-07-1_plus_1_gt_2.markdown
+++ b/src/blogs/2013-03-07-1_plus_1_gt_2.markdown
@@ -60,7 +60,7 @@ tags:
 
 我一直都比较反对目前很多公司的那种面试形式：彼此素未平生，凭很短时间的了解，然后就决定他是否要来这家公司。这实在是太不靠谱了，而且有些面试的内容也确实无聊，须知路遥知马力日久见人心。虽然话是这么说的，但是人家确实不能说花个一年半载的去面试一个人。我比较喜欢的形式是先不要太高的要求可以让你去一家公司实习，然后根据他几个月来的表现来判定这个人的水平。（但是，悲剧的是一些公司把实习生变成了廉价劳动力，不论表现如何从来就没有正式的打算让人家转正的意愿。）我觉得好的团队未必是说要找非常厉害的人，应该是找志同道合的人。大家彼此说的来，项目的问题容易沟通，才是关键。对于技术的把握，并不是关键因素。
 
-不过，我还有更极端的想法。目前的基础设施越发的发达，依靠很多人才能做一件事情的时代慢慢会过去，看看 [kickstarter ](http://www.kickstarter.com/)上面的项目，很多独立的团队已经在做过去庞大的公司才能做的事情。依赖更清晰的分工以及社会化生产，设计芯片的人只需要做设计，而把生产交给别人。构建应用的人依赖 GAE 这样的平台较少设备维护以及基础设施维护的成本，更专注于自己的产品（[PaaS正能量：6人团队，仅1人全职后端 支撑6000万用户](http://www.csdn.net/article/2013-03-06/2814372-paas-appengine-user-case)，刚刚看到一篇应景的文章）。人越多，沟通成本越大，酱油出现的概率越多，项目的发展越发难以估计。控制团队的规模并让自己保持团队的成长，没准儿是未来的趋势。
+不过，我还有更极端的想法。目前的基础设施越发的发达，依靠很多人才能做一件事情的时代慢慢会过去，看看 [kickstarter ](https://www.kickstarter.com/)上面的项目，很多独立的团队已经在做过去庞大的公司才能做的事情。依赖更清晰的分工以及社会化生产，设计芯片的人只需要做设计，而把生产交给别人。构建应用的人依赖 GAE 这样的平台较少设备维护以及基础设施维护的成本，更专注于自己的产品（[PaaS正能量：6人团队，仅1人全职后端 支撑6000万用户](https://www.csdn.net/article/2013-03-06/2814372-paas-appengine-user-case)，刚刚看到一篇应景的文章）。人越多，沟通成本越大，酱油出现的概率越多，项目的发展越发难以估计。控制团队的规模并让自己保持团队的成长，没准儿是未来的趋势。
 
 
 > 得出的结论很简单：如果一个 200人的项目中，有 25 个最能干和最有开发经验的项目经理，那么开除剩下的 175 名程序员，让项目经理来编程开发。 --人月神话
