--- a/src/blogs/2013-10-04-rspec.md
+++ b/src/blogs/2013-10-04-rspec.md
@@ -56,7 +56,7 @@ guard init rspec
 guard init livereload
 guard
 ```
-详情可见 [railscasts #264 Guard](http://railscasts.com/episodes/264-guard)
+详情可见 [railscasts #264 Guard](https://railscasts.com/episodes/264-guard)
 
 ## pending
 
