--- a/src/blogs/2017-10-25-el-nino.md
+++ b/src/blogs/2017-10-25-el-nino.md
@@ -15,13 +15,7 @@ tags:       [java, algorithm]
 
 虽然它本身有很多的问题，比如测试的执行不够稳定，比如很多题目的测试用例很少，比如 web page 存在各种展示的 bug等。但是 HackerEarth 有一个功能让我眼前一亮：它对各种题目进行了清晰的分门别类，让我这种练习者可以更针对性的进行训练。
 
-![](http://o8p12ybem.bkt.clouddn.com/15090095520933.jpg?imageView2/2/w/1200/q/75%7Cimageslim)
-
-另外一个对练习者友好的功能是它可以随意的查看一个 test cases 的输入和输出：
-
-![](http://o8p12ybem.bkt.clouddn.com/15090097425516.jpg?imageView2/2/w/1200/q/75%7Cimageslim)
-
-如上所示，如果我的一个提交出错了可以直接点击链接就能看到具体的输入和输出，虽然 HackerRank 也可以查看具体某一个 TestCase 但是需要自己通过在其网站上获取的点券购买，相比这里直接点击还是稍稍麻烦了一点。下面则是介绍一个我在这里写的一道图算法练习题。
+另外一个对练习者友好的功能是它可以随意的查看一个 test cases 的输入和输出。如果我的一个提交出错了可以直接点击链接就能看到具体的输入和输出，虽然 HackerRank 也可以查看具体某一个 TestCase 但是需要自己通过在其网站上获取的点券购买，相比这里直接点击还是稍稍麻烦了一点。下面则是介绍一个我在这里写的一道图算法练习题。
 
 # El Nino ! 一个 DFS 算法题目
 
