--- a/src/blogs/2011-12-07-e588a9e794a8jse5819ae68a93e58f96e79a84demo.markdown
+++ b/src/blogs/2011-12-07-e588a9e794a8jse5819ae68a93e58f96e79a84demo.markdown
@@ -16,8 +16,6 @@ categories:
 
 事实上，做爬虫很多时候就是想找到我们指定的一些数据。对页面里面很多乱七八糟的东西是没有兴趣的。可以只写js去定位一些元素里面的数据。当然，这会有很多的问题的。一个个打开，这样很慢的，效率是个问题。可是我觉得这的的确确是一个思路啊...
 
-[![](http://www.aisensiy.com/wp-content/uploads/2011/12/QQ%E6%88%AA%E5%9B%BE2011120719274111111111.png)](http://www.aisensiy.com/wp-content/uploads/2011/12/QQ%E6%88%AA%E5%9B%BE2011120719274111111111.png)
-
 这个控件里面是有ajax请求的，每次点击了一个城市，才会激发ajax请求获取数据。利用传统的方式，可能就要去找ajax的规律，然后利用规律一个个下载。但是我们用前端模拟点击事件，让页面自己按照常规的方式加载新的数据，然后从dom里面取到我们所需的内容就可以了
 
-这里我录了个屏，[前端自动抓取demo](http://www.aisensiy.com/wp-content/uploads/2011/12/renren2.swf)，由于尺寸比较大，就不插在文章里面了。请点击这个观看一段抓取的效果。当然，这仅仅是前端技术越发强大的冰山一角。我相信前端将会变得越发的强大以及越发的重要。
+这里我录了个屏，`录屏丢了`，由于尺寸比较大，就不插在文章里面了。请点击这个观看一段抓取的效果。当然，这仅仅是前端技术越发强大的冰山一角。我相信前端将会变得越发的强大以及越发的重要。
