--- a/src/blogs/2013-06-15-webapps.markdown
+++ b/src/blogs/2013-06-15-webapps.markdown
@@ -28,7 +28,7 @@ tags:
 ## canvas 也是浮云
 
 
-然后呢，就是 canvas 这个可以独立讲的东西。其实吧，它就是一个 javascript 可以控制的像素级别的画图板。对于一些应用场景，比如图表，图片的处理，图像的拼接这些是一个大大的增强。web 可以直接在前端做那些 flash 甚至是后端才可以做的事情了。这里有一个 canvas 做滤镜的 demo [http://xiebiji.com/works/QST/examples_new/imgCutMod/](http://xiebiji.com/works/QST/examples_new/imgCutMod/)。对于 canvas 做游戏这方面我确实是没有什么了解。我就不瞎说了。
+然后呢，就是 canvas 这个可以独立讲的东西。其实吧，它就是一个 javascript 可以控制的像素级别的画图板。对于一些应用场景，比如图表，图片的处理，图像的拼接这些是一个大大的增强。web 可以直接在前端做那些 flash 甚至是后端才可以做的事情了。这里有一个 canvas 做滤镜的 demo [https://xiebiji.com/works/QST/examples_new/imgCutMod/](https://xiebiji.com/works/QST/examples_new/imgCutMod/)。对于 canvas 做游戏这方面我确实是没有什么了解。我就不瞎说了。
 
 ## css3 很给力
 
@@ -39,7 +39,7 @@ tags:
 > Native apps perform better than Web apps.
 
 
-然而 transition 与 tranlation 在有些浏览器已经支持硬件加速，很多 native 的动画效果就差不多可以实现了。更详细的东西可以移步这里 [http://mobile.smashingmagazine.com/2012/06/21/play-with-hardware-accelerated-css/](http://mobile.smashingmagazine.com/2012/06/21/play-with-hardware-accelerated-css/)。
+然而 transition 与 tranlation 在有些浏览器已经支持硬件加速，很多 native 的动画效果就差不多可以实现了。更详细的东西可以移步这里 [https://mobile.smashingmagazine.com/2012/06/21/play-with-hardware-accelerated-css/](https://mobile.smashingmagazine.com/2012/06/21/play-with-hardware-accelerated-css/)。
 
 
 最后，很多 web 固有的，不如 native 的体验并不是不可避免的。比如 html 刷新的闪屏，我们是可以将内容通过 ajax 拿到之后通过一个动画效果展现出的。这些东西可能比较细致，听起来很麻烦，但是随着这方面的基础设施的越发齐全。我想，慢慢是可以解决的。
