--- a/src/blogs/2012-04-07-e7acace4b880e98193acm.markdown
+++ b/src/blogs/2012-04-07-e7acace4b880e98193acm.markdown
@@ -4,13 +4,13 @@ comments: true
 date: 2012-04-07 04:24:13+00:00
 layout: post
 slug: '%e7%ac%ac%e4%b8%80%e9%81%93acm'
-title: 第一道ACM
+title: 第一道 ACM
 wordpress_id: 195
 categories:
 - acm
 ---
 
-一直都对C/C++有抵触心理，嫌麻烦。不过由于如果想要做相关的训练，就必须依赖于这个平台。于是昨天就重新回顾了一下C++的语法，不求精通，只求可以写出来能AC的程序... 下面就是我写的第一道AC的题了。
+一直都对 C/C++ 有抵触心理，嫌麻烦。不过由于如果想要做相关的训练，就必须依赖于这个平台。于是昨天就重新回顾了一下 C++ 的语法，不求精通，只求可以写出来能 AC 的程序... 下面就是我写的第一道 AC 的题了。
 
 1001
 
@@ -21,7 +21,7 @@ categories:
 #include
 #include
 /*
- * 题目: 计算一个大数的n次方 结果要求是绝对精确值
+ * 题目：计算一个大数的 n 次方 结果要求是绝对精确值
  * http://poj.org/problem?id=1001
  *
  * 我也没有看其他高人的算法 而是凭自己的想法做出来的
@@ -36,7 +36,7 @@ int main() {
   int n;
   while(cin>>num>>n) {
     res = "1";
-    //通过乘法计算出n次方
+    //通过乘法计算出 n 次方
     for(int i=0; i      res = multi(res, num);
     }
 
